# myGPT

./: BLOG.md  README.md  pyproject.toml
chat_assistance/: core.py  gpt-start.py  gpt.py  ingestion.py
